src/k8s/demo-flux/infrastructure/base/gloo-system/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-proxy
  namespace: gloo-system
spec: {}
